# minimal_wasm_rust

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  index.html  index.js
src/: lib.rs
