[package]
name = "minimal_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
framebrush = { git = "https://github.com/serd223/framebrush.git", rev = "7b41386265d8908a1d1a1ccb723b4b47bac7141d"}
